tests/frontend/fail/array/create_arg_inconsistent_array_shape.act
constructor of A
interface constructor(int32[3][2] n2)


constructor of B
interface constructor()

creates
  A a := create A([[1,2,3],[4,5]])
